Fix results dropdown sometimes offset. This was happening because its added to the bottom which adds scrollbar, this shifts everything and returns incorrect offset for the box.

--- a/src/jquery.autocomplete.css
+++ b/src/jquery.autocomplete.css
@@ -75,6 +75,7 @@
 }
 
 .acResults {
+    top: 0px;
 	padding: 0px;
 	border: 1px solid WindowFrame;
 	background-color: Window;
